--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,9 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t guidopontet/docker-graphql:0.0.2 .
+        docker build -t guidopontet/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
         docker push guidopontet/docker-graphql:0.0.2
+        docker push guidopontet/docker-graphql:latest
