--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,19 +18,28 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with:
+        major_pattern: "major:"
+        minor_pattern: "feat:"
+        format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: version
+
     - name: Docker login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
     - name: Build Docker Image
       run: |
-        docker build -t guidopontet/docker-graphql:0.0.2 .
+        docker build -t guidopontet/docker-graphql:$NEW_VERSION .
         docker build -t guidopontet/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
-        docker push guidopontet/docker-graphql:0.0.2
+        docker push guidopontet/docker-graphql:$NEW_VERSION
         docker push guidopontet/docker-graphql:latest
